<resources>

    <string-array name="listCategory">
        <item>Bug</item>
        <item>Crash</item>
        <item>Password</item>
        <item>Help</item>
    </string-array>

    <!-- View messages -->
    <string name="error_invalid_password">Le mot de passe est trop court!(&lt;3 characters)</string>
    <string name="error_field_required">Champs obligatoire</string>
    <string name="error_invalid_email">Email non valide</string>
    <string name="error_incorrect_password">Mot de passe non valide</string>

    <!-- Toast messages -->
    <string name="toast_settings_selected">Paramètre sélectionné</string>
    <string name="toast_emailToAdmin">"Veuillez envoyer un mail à admin@ticketme.ch"</string>
    <string name="toast_emailCorrect">"Adresse email valide"</string>
    <string name="toast_emailIncorrect">"Adresse email invalide"</string>
    <string name="toast_emailTooShort">"Mot de passe trop court"</string>
    <string name="toast_emailNotConform">"Un caractère spécial minimum obligatoire"</string>
    <string name="toast_subjectEmpty">"Veuillez remplir le sujet!"</string>
    <string name="toast_messageEmpty">"Veuillez remplir le message!"</string>
    <string name="toast_createTicketError">"Erreur lors de la création. Le ticket n'a pas été créé."</string>
    <string name="toast_updateTicketError">"Problème lors de la modification. Le ticket n'as pas été modifié"</string>
    <string name="toast_deleteTicketError">"Problème lors de la suppression. Le ticket n'as pas été supprimé</string>
    <string name="toast_closingTicketError">"Problème lors de la fermeture. Le ticket n'as pas été fermé</string>
    <string name="toast_createUserError">"Problème lors de la création de l'utilisateur. L'utilisateur n'a pas été crée</string>
    <string name="toast_passwordInvalid">"Le mot de passe est invalide"</string>
    <string name="toast_updateUserError">"Problème lors de la modification de l'utilisateur. Les modification n'ont pas été enregistrées</string>
    <string name="toast_deleteUserError">"Problème lors de la suppression de l'utilisateur. La suppresssion n'a pas été effectuée"</string>


    <!-- Alert messages -->
    <string name="alert_titleWarning">"Attention!"</string>
    <string name="alert_titleInformation">"Information"</string>
    <string name="alert_ticketChangesNotSaved">"Les modifications ne seront pas enregistrées. Voulez-vous quitter la création de ticket?"</string>
    <string name="alert_ticketClosingStatus">"Voulez-vous fermer ce ticket?"</string>
    <string name="alert_ticketDelete">"Voulez-vous supprimer ce ticket?"</string>
    <string name="alert_userChangesNotSaved">"Les modifications ne seront pas enregistrées. Voulez-vous quitter la gestion utilisateur?"</string>
    <string name="alert_userDelete">"Etes-vous sûr de vouloir supprimer l'utilisateur?"</string>

    <!-- Layout object names -->
    <string name="ticketme">"TicketMe"</string>
    <string name="info_aboutInfo">"Cette application a été crée dans le cadre du cours 644-1 Mobile and Cloud"</string>
    <string name="info_aboutAdmin">"Liste des développeurs et administrateurs:"</string>
    <string name="info_admin1">"Benjamin Keller"</string>
    <string name="info_admin2">"Thomas Luyet"</string>

    <string name="loginHomepage_email">"Votre adresse email"</string>
    <string name="loginHomepage_password">"Votre mot de passe"</string>
    <string name="loginHomepage_connect">"Se connecter"</string>
    <string name="loginHomepage_register">"S'enregister"</string>
    <string name="loginHomepage_forgotPassword">"Mot de passe oublié"</string>
    <string name="loginHomepage_noAccount">"Vous n'avez pas de compte?"</string>

    <string name="loginNew_createAccount">"Créer un compte"</string>
    <string name="loginNew_joinUs">"N'attendez plus, rejoignez nous !"</string>
    <string name="loginNew_validate">"Valider"</string>

    <string name="ticketList_createticket">createTicket</string>

    <string name="ticketEdit_category">"Catégorie"</string>
    <string name="ticketEdit_subject">"Sujet"</string>
    <string name="ticketEdit_message">"Votre message"</string>

    <string name="ticketView_category">"AfficheCatégorie"</string>
    <string name="ticketView_subject">"AfficheSujet"</string>
    <string name="ticketView_message">"AfficheMessage"</string>

    <string name="userInterface_username">"Nom de l'utilisateur:"</string>
    <string name="userInterface_password">"Mot de passe :"</string>
    <string name="userInterface_usernameDisplay">"AfficheUsername"</string>
    <string name="userInterface_passwordDisplay">"AffichePassword"</string>
    <string name="userInterface_admin">"Administrateur"</string>

    <string name="drawerMenuDisplayTicket">"Affichage des tickets"</string>
    <string name="drawerMenuOpenTickets">"Tickets ouverts"</string>
    <string name="drawerMenuCloseTickets">"Tickets fermé"</string>
    <string name="drawerMenuSortTicket">"Ordre des tickets"</string>
    <string name="drawerMenuSortDesc">"Nouveau ticket en premier"</string>
    <string name="drawerMenuSortAsc">"Ancien ticket en premier"</string>
    <string name="drawerMenuManageUser">"Gestion des utilisateurs"</string>
    <string name="drawerMenuManager">"Administration"</string>

    <string name="appbarMenu_Info">"Info"</string>
    <string name="appbarMenu_Logout">"Déconnexion"</string>

    <string name="editMenu_save">Save</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>