<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login">


    <TextView
        android:id="@+id/loginNew_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/loginNew_createAccount"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/loginNew_shortAdv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/loginNew_shortAdv"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="72dp"
        android:text="@string/loginNew_joinUs"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/loginNew_editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginNew_title" />

    <EditText
        android:id="@+id/loginNew_editTextTextEmailAddress"
        android:layout_width="293dp"
        android:layout_height="42dp"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:hint="@string/loginHomepage_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/loginNew_editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/loginNew_editTextTextPassword"
        android:layout_width="293dp"
        android:layout_height="42dp"
        android:layout_marginBottom="104dp"
        android:ems="10"
        android:hint="@string/loginHomepage_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/loginNew_btnValider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/loginNew_btnValider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="176dp"
        android:text="@string/loginNew_validate"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>