<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TicketViewActivity">

    <include
        layout="@layout/toolbar_layout">
    </include>

    <TextView
        android:id="@+id/ticketView_category"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="128dp"
        android:layout_marginBottom="28dp"
        android:text="@string/ticketView_category"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/ticketView_subject"
        app:layout_constraintEnd_toEndOf="@+id/ticketView_subject"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ticketView_subject"
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="28dp"
        android:text="@string/ticketView_subject"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/ticketView_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticketView_category" />

    <TextView
        android:id="@+id/ticketView_message"
        android:layout_width="300dp"
        android:layout_height="413dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="28dp"
        android:text="@string/ticketView_message"
        android:maxLines="20"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticketView_subject"
        app:layout_constraintVertical_bias="0.638" />


</androidx.constraintlayout.widget.ConstraintLayout>